@@ -5,7 +5,8 @@ Revision history for Linux-Statm-Tiny
   - Improved POD so that it's clear that vsz and rss are aliases.
 
   [Enhancements]
-  - vsz and rss and explicitly defined as aliases
+  - vsz and rss and *_pages attributes are explicitly defined as
+    alias.
 
   - dist.ini modified to use AutoPrereqs and add better
     metadata to the distribution.
@@ -17,6 +18,9 @@ Revision history for Linux-Statm-Tiny
   - The kb and mb aliases use the ceil function to round values up.
 
   - Added refresh method to refresh values.
+
+  [Other Changes]
+  - Added tests for pages alias.
 
 0.0300    2015-01-12 11:26:08+00:00 Europe/London
   [Documentation]
